--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,8 @@ scikit-learn>=0.24.0
 tensorflow>=2.4.0
 matplotlib>=3.3.3
 yfinance>=0.1.63
-ta>=0.7.0 
+ta>=0.7.0
+requests>=2.25.1
+beautifulsoup4>=4.9.3
+textblob>=0.15.3
+lxml>=4.9.0 
