Enhanced sentiment analysis with multiple sources and advanced metrics

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,7 @@ ta>=0.7.0
 requests>=2.25.1
 beautifulsoup4>=4.9.3
 textblob>=0.15.3
-lxml>=4.9.0 
+lxml>=4.9.0
+nltk>=3.6.0
+newspaper3k>=0.2.8
+vaderSentiment>=3.3.2 
